export const snapshot = {};

snapshot[`FileUpdate.write() > direct import 1`] = `
'import { assertEquals } from "https://deno.land/std@123.456.789/assert/assert_equals.ts";
import { createGraph } from "https://deno.land/x/deno_graph@123.456.789/mod.ts";
import emoji from "npm:node-emoji@123.456.789";
import { noop } from "./lib.ts";
'
`;

snapshot[`FileUpdate.write() > direct import 2`] = `
'import { assertExists } from "https://deno.land/std@123.456.789/assert/assert_exists.ts";
export const noop = () => {};
'
`;

snapshot[`FileUpdate.write() > import map 1`] = `
'{
  "imports": {
    "std/": "https://deno.land/std@123.456.789/",
    "deno_graph": "https://deno.land/x/deno_graph@123.456.789/mod.ts",
    "node-emoji": "npm:node-emoji@123.456.789",
    "/": "./"
  }
}'
`;

snapshot[`FileUpdate.write() > import map 2`] = `
'import { VERSION } from "https://deno.land/std@123.456.789/version.ts";
export const noop = () => {};
'
`;

snapshot[`FileUpdate.write() > import map with no resolve 1`] = `
'import {} from "https://deno.land/std@123.456.789/testing/asserts.ts";
'
`;

snapshot[`FileUpdate.write() > unversioned specifiers 1`] = `
'import { VERSION } from "https://deno.land/std@123.456.789";
import { createGraph } from "https://deno.land/x/deno_graph@123.456.789/mod.ts";
import { emojify } from "npm:node-emoji@123.456.789";
import { noop } from "./lib.ts";
'
`;

snapshot[`FileUpdate.write() > unversioned specifiers 2`] = `
'import { VERSION } from "https://deno.land/std@123.456.789/version.ts";
export const noop = () => {};
'
`;
